clean up Lecture 1.4

--- a/main.bib
+++ b/main.bib
@@ -273,6 +273,24 @@ MRREVIEWER = {Neil P. Strickland},
        URL = {http://dx.doi.org/10.1090/conm/146/01218},
 }
 
+@article {Harris,
+    AUTHOR = {Harris, Bruno},
+     TITLE = {Bott periodicity via simplicial spaces},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {62},
+      YEAR = {1980},
+    NUMBER = {2},
+     PAGES = {450--454},
+      ISSN = {0021-8693},
+     CODEN = {JALGA4},
+   MRCLASS = {55R45},
+  MRNUMBER = {563240},
+MRREVIEWER = {Harold Hastings},
+       DOI = {10.1016/0021-8693(80)90194-5},
+       URL = {http://dx.doi.org/10.1016/0021-8693(80)90194-5},
+}
+
 @article {HedayatzadehFieldCase,
     AUTHOR = {Hedayatzadeh, S. Mohammad Hadi},
      TITLE = {Exterior powers of {$\pi$}-divisible modules over fields},
@@ -393,6 +411,25 @@ MRREVIEWER = {David A. Blanc},
   MRNUMBER = {1320994},
        DOI = {10.1090/conm/181/02036},
        URL = {http://dx.doi.org/10.1090/conm/181/02036},
+}
+
+@article {HoveyMoritaThy,
+    AUTHOR = {Hovey, Mark},
+     TITLE = {Morita theory for {H}opf algebroids and presheaves of
+              groupoids},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {124},
+      YEAR = {2002},
+    NUMBER = {6},
+     PAGES = {1289--1318},
+      ISSN = {0002-9327},
+     CODEN = {AJMAAN},
+   MRCLASS = {16W30 (14L17 55N22)},
+  MRNUMBER = {1939787},
+MRREVIEWER = {Gabriele Vezzosi},
+       URL =
+              {http://muse.jhu.edu/journals/american_journal_of_mathematics/v124/124.6hovey.pdf},
 }
 
 @article {HoveyStrickland,
